(Question 2a) Visual Design
Visual design overhaul

--- a/Question 2/q2a.html
+++ b/Question 2/q2a.html
@@ -12,50 +12,36 @@
     <ul class="nav">
       <li class="nav-logo">
         <a href="home.html">
-          <img src="res/imgs/imageLargeSquare.jpg" alt="OUWC Icon">
+          <img src="res/imgs/logo.png" alt="OUWC Icon">
         </a>
       </li>
-      <li class="nav-item nav-item-active">
+      <li class="nav-item">
         <a class="nav-link" href="home.html">
-          <img src="res/imgs/imageSmallSquare.jpg" alt="Home Icon">
+          <img src="res/imgs/home.png" alt="Home Icon">
           <span>Home</span>
         </a>
       </li>
       <li class="nav-item ">
         <a class="nav-link" href="members.html">
-          <img src="res/imgs/imageSmallSquare.jpg" alt="Members Icon">
+          <img src="res/imgs/members.png" alt="Members Icon">
           <span>Members</span>
         </a>
       </li>
-      <li class="nav-item nav-item-active">
+      <li class="nav-item">
         <a class="nav-link" href="announcements.html">
-          <img src="res/imgs/imageSmallSquare.jpg" alt="News & Announcements Icon">
+          <img src="res/imgs/megaphone.png" alt="News & Announcements Icon">
           <span>News & Announcements</span>
         </a>
-        <ul class="nav-dropdown">
-          <li class="nav-item nav-subitem-active">
-            <a class="nav-link" href="announcements.html">
-              <img src="res/imgs/imageSmallSquare.jpg" alt="Announcement Icon">
-              <span>Announcements</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="newsfeed.html">
-              <img src="res/imgs/imageSmallSquare.jpg" alt="News Icon">
-              <span>News</span>
-            </a>
-          </li>
-        </ul>
       </li>
       <li class="nav-item  nav-item-active">
         <a class="nav-link" href="events.html">
-          <img src="res/imgs/imageSmallSquare.jpg" alt="Events Icon">
+          <img src="res/imgs/event.png" alt="Events Icon">
           <span>Events</span>
         </a>
         <ul class="nav-dropdown">
           <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="res/imgs/imageSmallSquare.jpg" alt="New Event Icon">
+            <a class="nav-link nav-subitem-active" href="#">
+              <img src="res/imgs/add.png" alt="New Event Icon">
               <span>New Event</span>
             </a>
           </li>
@@ -63,7 +49,7 @@
       </li>
       <li class="nav-item nav-bottom">
         <a class="nav-link" href="index.html">
-          <img src="res/imgs/imageSmallSquare.jpg" alt="Logout Icon">
+          <img src="res/imgs/logout.png" alt="Logout Icon">
           <span>Logout</span>
         </a>
       </li>
@@ -71,7 +57,6 @@
   </nav>
   <header id="header-addwalk">
     <div class="banner">
-      <h2>ye</h2>
     </div>
   </header>
   <main id="main-addwalk">
