(Question 2a) Validating to standards
Made sure the page validated on both CSS and HTML tests

--- a/Question 2/q2a.html
+++ b/Question 2/q2a.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Walking Event | OUWC Admin</title>
   <link rel="stylesheet" href="res/css/q2a.css">
 </head>
 
@@ -68,48 +68,46 @@
         <div class="section-content">
           <div class="row">
             <div class="input-group span-row">
-              <label for="">Name</label>
-              <input type="text" name="" placeholder="Enter Walk Name...">
+              <label for="event-name">Name</label>
+              <input id="event-name" type="text" name="event-name" placeholder="Enter Walk Name...">
             </div>
           </div>
           <div class="row">
             <div class="input-group">
-              <label for="">Event Date</label>
-              <input type="date" name="" placeholder="">
+              <label for="event-date">Event Date</label>
+              <input id="event-date" type="text" name="event-date" placeholder="dd/mm/yyyy">
             </div>
             <div class="input-group">
-              <label for="">Start Time</label>
-              <input type="time" name="" placeholder="">
+              <label for="event-time">Start Time</label>
+              <input id="event-time" type="text" name="event-time" placeholder="24hr Clock Format">
             </div>
           </div>
           <div class="row">
             <div class="input-group span-row">
-              <label for="">Meeting Point</label>
-              <input type="text" name="" placeholder="">
+              <label for="event-meeting">Meeting Point</label>
+              <input id="event-meeting" type="text" name="event-meeting" placeholder="Please enter the meeting point...">
             </div>
           </div>
           <div class="row">
             <div class="input-group">
-              <label for="">Distance (Miles)</label>
-              <input type="number" name="" placeholder="">
+              <label for="event-distance">Distance (Miles)</label>
+              <input id="event-distance" type="number" name="event-distance" placeholder="0">
             </div>
             <div class="input-group">
-              <label for="">Status</label>
-              <select class="" name="">
-                <option class="status-approved" value="" selected>Approved</option>
-                <option class="status-proposed" value="">Proposed</option>
-                <option class="status-rejected" value="">Rejected</option>
+              <label for="event-status">Status</label>
+              <select id="event-status" name="event-status">
+                <option class="status-approved" value="approved" selected>Approved</option>
+                <option class="status-proposed" value="proposed">Proposed</option>
+                <option class="status-rejected" value="rejected">Rejected</option>
               </select>
             </div>
           </div>
-          <!-- <div class="row"> -->
           <div class="input-group-vertical span-row">
-            <label for="news-edit-content" class="span-top">News Post Content</label>
+            <label for="event-notes" class="span-top">Walking Event Notes</label>
             <div class="container">
-              <textarea id="news-edit-content" name="news-edit-content" rows="4" maxlength="300" placeholder="Enter News Post (max 300 characters)"></textarea>
+              <textarea id="event-notes" name="event-notes" rows="4" maxlength="300" placeholder="Enter Event Notes (max 300 characters)"></textarea>
             </div>
           </div>
-          <!-- </div> -->
         </div>
         <div class="section-footer">
           <div class="button-group">
