--- a/Question 2/Q2A/q2a.html
+++ b/Question 2/Q2A/q2a.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Walking Event | OUWC Admin</title>
+  <meta name="description" content="Create New Walking Event">
+	<meta name="author" content="Dylan Mullen">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <link rel="stylesheet" href="res/css/q2a.css">
 </head>
 
@@ -64,7 +67,8 @@
       <div class="section-header">
         <h1>New Walk Event</h1>
       </div>
-      <form class="" action="https://students.open.ac.uk/mct/tt284/reflect/reflect.php" method="post">
+      <form action="https://students.open.ac.uk/mct/tt284/reflect/reflect.php" method="post">
+        <input type="hidden" name="sessionID" value="12345678-09ab-1111-cdef">
         <div class="section-content">
           <div class="row">
             <div class="input-group span-row">
