--- a/Question 1/createNewsPost.html
+++ b/Question 1/createNewsPost.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Create News Post | OUWC</title>
+  <meta name="description" content="Create a news post">
+  <meta name="author" content="Dylan Mullen">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <link rel="stylesheet" href="res/css/style.css">
 </head>
 
@@ -63,7 +66,7 @@
   </nav>
 
   <main id="main-newsPost">
-    
+
   </main>
 
 </body>
