--- a/Question 1/events.html
+++ b/Question 1/events.html
@@ -3,51 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>Events | OUWC</title>
+    <meta name="description" content="List of Events">
+    <meta name="author" content="Dylan Mullen">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link rel="stylesheet" href="res/css/style.css">
   </head>
   <body>
     <nav class="nav-mainMenu">
       <ul class="nav">
         <li class="nav-logo">
-          <a href="#">
-            <img src="res/imgs/imageLargeSquare.jpg" alt="">
+          <a href="home.html">
+            <img src="res/imgs/imageLargeSquare.jpg" alt="OUWC Icon">
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <a class="nav-link" href="home.html">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="Home Icon">
             <span>Home</span>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link" href="members.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="Members Icon">
             <span>Members</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="announcements.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="News & Announcements Icon">
             <span>News & Announcements</span>
           </a>
         </li>
         <li class="nav-item  nav-item-active">
-          <a class="nav-link" href="members.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <a class="nav-link" href="events.html">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="Events Icon">
             <span>Events</span>
           </a>
           <ul class="nav-dropdown">
             <li class="nav-item">
-              <a class="nav-link" href="newsfeed.html">
-                <img src="res/imgs/imageSmallSquare.jpg" alt="">
+              <a class="nav-link" href="addwalk.html">
+                <img src="res/imgs/imageSmallSquare.jpg" alt="New Event Icon">
                 <span>New Event</span>
               </a>
             </li>
-           </ul>
+          </ul>
         </li>
         <li class="nav-item nav-bottom">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <a class="nav-link" href="index.html">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="Logout Icon">
             <span>Logout</span>
           </a>
         </li>
@@ -165,7 +168,7 @@
 
         <div class="section-footer">
           <div class="buttonGroup">
-            <button class="btn-approve" type="button" name="button">New Event</button>
+            <a class="btn btn-approve" href="addwalk.html">New Event</a>
             <button class="btn-deny" type="button" name="button">Clear Events</button>
           </div>
         </div>
