--- a/Question 1/home.html
+++ b/Question 1/home.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Admin Home | OUWC</title>
+  <meta name="description" content="Admin Homepage">
+  <meta name="author" content="Dylan Mullen">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <link rel="stylesheet" href="res/css/style.css">
 </head>
 
@@ -54,7 +57,7 @@
         </a>
         <ul class="nav-dropdown">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="addwalk.html">
               <img src="res/imgs/imageSmallSquare.jpg" alt="New Event Icon">
               <span>New Event</span>
             </a>
