--- a/Question 1/index.html
+++ b/Question 1/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
 	<title>Admin Login | OUWC</title>
-	<link rel="stylesheet" href="res\css\style.css">
+  <meta name="description" content="Admin Login Page">
+  <meta name="author" content="Dylan Mullen">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+	<link rel="stylesheet" href="res/css/style.css">
 </head>
 
 <body>
-	<header class="banner">
-		<div class="column">
-			<img src="res/imgs/imageWideLargeRectangle.jpg" alt="Banner of OUWC">
+	<header id="header-login">
+		<div class="banner">
+			<p>Organisation Banner</p>
 		</div>
 	</header>
 	<main id="main-login">
