--- a/Question 1/members.html
+++ b/Question 1/members.html
@@ -1,180 +1,189 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Members | OUWC</title>
-    <link rel="stylesheet" href="res/css/style.css">
-  </head>
-  <body>
-    <nav class="nav-mainMenu">
-      <ul class="nav">
-        <li class="nav-logo">
-          <a href="#">
-            <img src="res/imgs/imageLargeSquare.jpg" alt="">
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Home</span>
-          </a>
-        </li>
-        <li class="nav-item nav-item-active">
-          <a class="nav-link" href="members.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Members</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="newsfeed.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>News & Announcements</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="members.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Events</span>
-          </a>
-        </li>
-        <li class="nav-item nav-bottom">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Logout</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <main id="main-members">
-      <section id="memberApproval">
-        <div class="section-header">
-          <h1>Awaiting Approval</h1>
-        </div>
-        <table>
-          <thead>
-            <tr>
-              <th class="pictureCell">Picture</th>
-              <th>Name</th>
-              <th>Email</th>
-              <th class="textCell">Reason for Joining</th>
-              <th>Status</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>loremipsum@latin.ipsum</td>
-              <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-approve" type="button" name="button">Approve</button>
-                  <button class="btn-deny" type="button" name="button">Deny</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img class="rounded"  src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>loremipsum@latin.ipsum</td>
-              <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-approve" type="button" name="button">Approve</button>
-                  <button class="btn-deny" type="button" name="button">Deny</button>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <div class="section-footer"></div>
 
-      </section>
-      <section id="members">
-        <div class="section-header">
-          <h1>Members</h1>
-        </div>
-        <table>
-          <thead>
-            <tr>
-              <th class="pictureCell">Picture</th>
-              <th>Name</th>
-              <th>Email</th>
-              <th>Date Joined</th>
-              <th>Acitvity</th>
-              <th>Manage</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td><span class="active">Active</span></td>
-              <td>
-                <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
-                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td><span class="inactive">Inactive</span></td>
-              <td>
-                <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
-                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td><span class="active">Active</span></td>
-              <td>
-                <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
-                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td><span class="active">Active</span></td>
-              <td>
-                <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
-                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td><span class="inactive">Inactive</span></td>
-              <td>
-                <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
-                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <div class="section-footer"></div>
-      </section>
-    </main>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Members | OUWC</title>
+
+  <meta name="description" content="List of all members">
+  <meta name="author" content="Dylan Mullen">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+  <link rel="stylesheet" href="res/css/style.css">
+</head>
+
+<body>
+  <nav class="nav-mainMenu">
+    <ul class="nav">
+      <li class="nav-logo">
+        <a href="home.html">
+          <img src="res/imgs/imageLargeSquare.jpg" alt="OUWC Icon">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="home.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="Home Icon">
+          <span>Home</span>
+        </a>
+      </li>
+      <li class="nav-item nav-item-active">
+        <a class="nav-link" href="members.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="Members Icon">
+          <span>Members</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="announcements.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="News & Announcements Icon">
+          <span>News & Announcements</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="events.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="Events Icon">
+          <span>Events</span>
+        </a>
+      </li>
+      <li class="nav-item nav-bottom">
+        <a class="nav-link" href="index.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="Logout Icon">
+          <span>Logout</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <main id="main-members">
+    <section id="memberApproval">
+      <div class="section-header">
+        <h1>Awaiting Approval</h1>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th class="pictureCell">Picture</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th class="textCell">Reason for Joining</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
+            <td>John Smith</td>
+            <td>loremipsum@latin.ipsum</td>
+            <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit
+              amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
+            <td>
+              <div class="buttonGroup">
+                <button class="btn-approve" type="button" name="button">Approve</button>
+                <button class="btn-deny" type="button" name="button">Deny</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
+            <td>John Smith</td>
+            <td>loremipsum@latin.ipsum</td>
+            <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit
+              amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
+            <td>
+              <div class="buttonGroup">
+                <button class="btn-approve" type="button" name="button">Approve</button>
+                <button class="btn-deny" type="button" name="button">Deny</button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="section-footer"></div>
+
+    </section>
+    <section id="members">
+      <div class="section-header">
+        <h1>Members</h1>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th class="pictureCell">Picture</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Date Joined</th>
+            <th>Acitvity</th>
+            <th>Manage</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
+            <td>John Smith</td>
+            <td>Loremipsum@dolol.sit</td>
+            <td>01/01/1970</td>
+            <td><span class="active">Active</span></td>
+            <td>
+              <div class="buttonGroup">
+                <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                <button class="btn-deny" type="button" name="deleteMember">Delete</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
+            <td>John Smith</td>
+            <td>Loremipsum@dolol.sit</td>
+            <td>01/01/1970</td>
+            <td><span class="inactive">Inactive</span></td>
+            <td>
+              <div class="buttonGroup">
+                <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                <button class="btn-deny" type="button" name="deleteMember">Delete</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
+            <td>John Smith</td>
+            <td>Loremipsum@dolol.sit</td>
+            <td>01/01/1970</td>
+            <td><span class="active">Active</span></td>
+            <td>
+              <div class="buttonGroup">
+                <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                <button class="btn-deny" type="button" name="deleteMember">Delete</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
+            <td>John Smith</td>
+            <td>Loremipsum@dolol.sit</td>
+            <td>01/01/1970</td>
+            <td><span class="active">Active</span></td>
+            <td>
+              <div class="buttonGroup">
+                <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                <button class="btn-deny" type="button" name="deleteMember">Delete</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
+            <td>John Smith</td>
+            <td>Loremipsum@dolol.sit</td>
+            <td>01/01/1970</td>
+            <td><span class="inactive">Inactive</span></td>
+            <td>
+              <div class="buttonGroup">
+                <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                <button class="btn-deny" type="button" name="deleteMember">Delete</button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="section-footer"></div>
+    </section>
+  </main>
+</body>
+
 </html>
