--- a/Question 2/Q2B/q2b.html
+++ b/Question 2/Q2B/q2b.html
@@ -6,7 +6,7 @@
   <title>Walking Event | OUWC Admin</title>
   <meta name="description" content="Create New Walking Event">
 	<meta name="author" content="Dylan Mullen">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="stylesheet" href="res/css/q2b.css">
 </head>
 
@@ -75,6 +75,12 @@
             <div class="input-group span-row">
               <label for="event-name">Name</label>
               <input id="event-name" type="text" name="event-name" placeholder="Enter Walk Name...">
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-group span-row">
+              <label for="event-organiser">Organiser</label>
+              <input id="event-organiser" type="text" name="event-organiser" placeholder="(Optional)">
             </div>
           </div>
           <div class="row">
